# Autosearch

./: .coverage-baseline  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .perf-baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  INDEX.jsonl  PROTOCOL.md  README.md  README.zh.md  SECURITY.md  acquisition.py  api_contract.py  autosearch.py  avo.py  cli.py  control_plane.py  daily.py  docker-compose.test.yml  embeddings.py  engine.py  env.example  evaluation_harness.py  evidence_records.py  goal_benchmark.py  goal_bundle_loop.py  goal_editor.py  goal_judge.py  goal_loop.py  goal_runtime.py  goal_services.py  interface.py  (+19 more)
.claude-plugin/: marketplace.json  plugin.json
.github/: CONDUCTOR.md  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md  release-notes-instructions.md
.husky/: pre-commit  pre-push
acquisition/: __init__.py  chunking.py  content_filter.py  crawl4ai_adapter.py  document_models.py  fetch_pipeline.py  markdown_cleaner.py  markdown_strategy.py  reference_extractor.py  render_pipeline.py
agents/: researcher.md
autoloop/: dimension_hunter.py  evolve.py  prepare.py  program.md  run_loop.sh  search_program.py
autosearch/: __init__.py  init_runner.py
autosearch-mcp/: server.py  tools.py
capabilities/: __init__.py  _types.py  avo_score.py  avo_vary.py  backend_health.py  beast_mode.py  breadth_control.py  cache_results.py  check_health.py  cluster_results.py  consensus_score.py  content_merge.py  crawl_page.py  cross_verify.py  dedup_results.py  deep_discover.py  evaluate_heuristic.py  evaluate_llm.py  execute_research.py  export_results.py  follow_links.py  freshness_check.py  generate_report.py  jina_rerank.py  learnings_extract.py  learnings_persist.py  normalize_evidence.py  persona_expand.py  plan_research.py  quality_filter.py  rerank_results.py  search_all.py  search_and_process.py  search_arxiv.py  search_datasets.py  search_github.py  search_reddit_sub.py  search_semantic.py  search_social.py  search_v2ex.py  (+3 more)
channels/: STANDARD.md
commands/: autosearch.md  setup.md
delivery/: 20260403-mcp-ecosystem-report.md  20260403-self-evolving-search.md  f006-self-evolving-agents.md
docs/: 2026-03-22-system-architecture.md  2026-03-25-competitor-improvements.md  2026-03-26-dedupe-repair-handoff.md  2026-03-26-interface-contract.md  README.md  architecture.mdx  changelog.mdx  channels.mdx  contributing.mdx  delivery-status.md  docs.json  install.md  internal-docs.md  introduction.mdx  local-nightly.md  mcp-channels-playbook.md  mcp-clients.md  million-user-product-readiness-plan.md  platform-skill-template.md  principles.mdx  protocol.mdx  public-repo-policy.md  quickstart.mdx  release-policy.md  roadmap.md  security.mdx  skill-format.md  skills.mdx  upgrade-report.md  v2-adapter-gap-spec.json  v2-e2b-test-plan.md  v2-health-matrix-2026-04-16.md
evidence/: 20260328T091700Z-arxiv.jsonl  20260328T091700Z-merged.jsonl  20260328T091700Z-reddit.jsonl  20260403-self-evolving-search.jsonl  __init__.py  checked-rubrics-self-evolving-search-engines.jsonl  delivery-self-evolving-ai-agent-frameworks-v2.md  delivery-self-evolving-ai-agent-frameworks.md  delivery-vector-db-rag.md  legacy_adapter.py  models.py  normalize.py  results-self-evolving-agents-v2.jsonl  results-vector-db-rag.jsonl  rubrics-ai-coding-market-2026.jsonl  rubrics-ai-search-2026.jsonl  rubrics-ai-self-evolution-2026.jsonl  rubrics-chinese-llm-ecosystem.jsonl  rubrics-production-rag-systems.jsonl  rubrics-self-evolving-search-engines.jsonl  test-delivery-ai-code-review-tools-2026.md
evidence_index/: __init__.py  meilisearch_adapter.py  query.py
experience/: INDEX.jsonl
genome/: README.md  __init__.py  primitives.py  runtime.py  safe_eval.py  schema.py  vary.py
goal_cases/: atoms-auto-mining-perfect.json  autosearch-alphaxiv-integration.json  autosearch-capability-doctor.json  autosearch-goal-judge.json
hooks/: hooks.json
legacy/: api_contract.py  autosearch.py  cli.py  control_plane.py  daily.py  data-links.md  doctor.py  embeddings.py  evidence_records.py  goal_loop.py  outcomes.py  pipeline.py  platforms.md  standard.json
lib/: assemble_html.py  assemble_slides.py  content_processing.py  convergence.py  enrichment.py  entity_extract.py  judge.py  phase2.py  quality_eval.py  query_type.py  scoring.py  search_runner.py
npm/: README.md  package.json  postinstall.js
rerank/: hybrid.py  lexical.py
research/: __init__.py  action_policy.py  budget.py  bundle.py  decision.py  deep_loop.py  diary.py  executor.py  gap_queue.py  graph_models.py  mode_policy.py  modes.py  planner.py  planning_ops.py  routeable_output.py  synthesizer.py
scripts/: batch_enrich.py  bump-version.sh  committer  generate-metadata.sh  generate_channels_table.py  install.sh  nightly-local.sh  release-gate.sh  release-test.sh  run_search.sh  setup.sh
search_mesh/: __init__.py  compat.py  models.py  provider_policy.py  registry.py  router.py
site/: CNAME  index.html
sources/: catalog.json
standards/: README.md  content-candidate-standard.md  demand-standard.md  experience-standard.md  routeable-map-standard.md  search-standard.md
state/: channels.json  config.json  evolution-log.jsonl  knowledge-growth.json  patterns-v2.jsonl  patterns.jsonl  query-outcomes.jsonl  rubric-history.jsonl  skill-reference-v1.jsonl  worklog.jsonl
(+1352 files in other folders)
