[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autosearch"
version = "0.0.1a1"
description = "AutoSearch v2 M1 skeleton"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite",
  "ddgs",
  "fastapi",
  "feedparser",
  "httpx",
  "mcp",
  "pydantic",
  "pytest",
  "pytest-asyncio",
  "pyyaml",
  "rank-bm25",
  "ruff",
  "simhash",
  "structlog",
  "tiktoken",
  "trafilatura",
  "typer",
  "uvicorn",
]

[project.scripts]
autosearch = "autosearch.cli.main:app"
autosearch-mcp = "autosearch.mcp.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "network: tests that require network access",
    "real_llm: tests that call a live LLM API (needs ANTHROPIC/OPENAI/GOOGLE key or claude CLI)",
    "smoke: subprocess or live-server tests (slower, no external API calls)",
    "perf: concurrency / load tests (local only, on-demand)",
    "slow: tests that take > 5s",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools.packages.find]
include = ["autosearch*"]
