[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autosearch"
version = "2026.04.23.4"
description = "AutoSearch v2 M1 skeleton"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12",
  "aiosqlite",
  "ddgs",
  "fastapi",
  "feedparser",
  "httpx",
  "mcp",
  "markdown",
  "markdownify>=0.11",
  "paper-search-mcp",
  "pydantic",
  "pytest",
  "pytest-asyncio",
  "pyyaml",
  "rank-bm25",
  "ruff",
  "simhash",
  "structlog",
  "tiktoken",
  "trafilatura",
  "typer",
  "uvicorn",
  "yt-dlp>=2026.3.17",
]

[project.optional-dependencies]
browser = [
  "playwright>=1.40",
]
embeddings = [
  "sentence-transformers>=2.5",
  "scikit-learn>=1.4",
]

[project.scripts]
autosearch = "autosearch.cli.main:app"
autosearch-mcp = "autosearch.mcp.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "network: tests that require network access",
    "real_llm: tests that call a live LLM API (needs ANTHROPIC/OPENAI/GOOGLE key or claude CLI)",
    "smoke: subprocess or live-server tests (slower, no external API calls)",
    "perf: concurrency / load tests (local only, on-demand)",
    "slow: tests that take > 5s",
    "live: live network integration tests (real API calls, run in nightly CI)",
    "e2e: end-to-end research flow tests (all mock, no real API needed)",
    "avo: AVO self-evolution cycle tests (slow, run before release)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"autosearch.skills.channels" = ["**/*.md", "**/*.py"]
"autosearch.skills.meta" = ["**/*.md", "**/*.py"]
"autosearch.skills.router" = ["**/*.md", "**/*.py"]
"autosearch.skills.tools" = ["**/*.md", "**/*.py"]
"autosearch.skills.prompts" = ["*.md"]

[tool.setuptools.packages.find]
include = ["autosearch*"]
